# huggingface

./: README.md  README_new.md  README_old.md  TROUBLESHOOTING.md  advanced_examples.py  chroma_search_demo.py  chromatesting.py  main.py  pyproject.toml  requirements.txt  run_app.bat  run_app.py  simple_launcher.py  streamlit_app.py  test_setup.py  usage_guide.py  validate_app.py
chroma_db/: chroma.sqlite3
